--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <html>
     Hello World. 
     Welcome to my first website. 
+    <br>
+    <a href="https://allanheo.github.io/ECS8th2018_2019">Click here to see all my ECS projects.</a>
+    <a href="/ECS8th2018_2019">You can also click here to see all my ECS projects.</a>
     
 </html>
