--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -2,7 +2,7 @@
 <html>
   This is where I will upload all my projects from this year.
   <ul>
-    <li>Click here for the post card!
+    <li><a href="https://allanheo.github.io/ECS8th2018_2019/postcard">Click here for the post card!</a>
   </ul>
 
 </html>
