--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -5,4 +5,8 @@
     <li><a href="https://allanheo.github.io/ECS8th2018_2019/postcard">Click here for the post card!</a>
   </ul>
 
+  
+  <a href="allanheo.github.io">Click here to go back home</a> 
+  <a href="https://allanheo.github.io">Or click here to go back home</a> 
+  <a href="/">or click here to go back home</a> 
 </html>
