--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -6,7 +6,7 @@
   </ul>
 
   
-  <a href="allanheo.github.io">Click here to go back home</a> 
-  <a href="https://allanheo.github.io">Or click here to go back home</a> 
-  <a href="/">or click here to go back home</a> 
+  <a href="allanheo.github.io">Click here to go back home</a> <!--absolute path-->
+  <a href="https://allanheo.github.io">Or click here to go back home</a> <!--another absolute path-->
+  <a href="/">or click here to go back home</a> <!--a relative path-->
 </html>
