--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>I love chocolate!!!</title>
         <meta          >
         <meta          >
+        <!-- <link rel="stylesheet" href="https://allanheo.github.io/main.css"> -->
+        <link rel="stylesheet" href="/main.css">
+        
         
 <!--    <style>
           a { /*a, h1, h2 are called selectors
