--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html>
+  <head>
+     <link rel="stylesheet" href="/main.css">
+  </head>
+  
+  
   This is where I will upload all my projects from this year.
   <ul>
     <li><a href="https://allanheo.github.io/ECS8th2018_2019/postcard">Click here for the post card!</a>
