--- a/ECS8th2018_2019/postcard/index.html
+++ b/ECS8th2018_2019/postcard/index.html
@@ -5,7 +5,8 @@
     <!--<link rel="stylesheet" href="/css/postcard.css">-->
     <!--/css/postcard.css is the RELATIVE PATH, which can only be used if you're on codeavengers.com-->
     <!--I'm not on codeavengers.com, so I must use ABSOLUTE path, https://codeavengers.com/css....-->
-    <link rel="stylesheet" href="https://codeavengers.com/css/postcard.css">
+    <!--<link rel="stylesheet" href="https://allanheo.github.io/ECS8th2018_2019/postcard/main.css">-->
+    <link rel="stylesheet" href="/ECS8th2018_2019/postcard/main.css">
 
     <!--element: link
         attributes: rel, href, .....
